@@ -105,6 +105,10 @@ Bug Fixes
 
 * SOLR-4568: The lastPublished state check before becoming a leader is not 
   working correctly. (Mark Miller)
+  
+* SOLR-4570: Even if an explicit shard id is used, ZkController#preRegister 
+  should still wait to see the shard id in it's current ClusterState.
+  (Mark Miller)
 
 Other Changes
 ----------------------
